PyMaker/datas/object2/RawHTML/i21001/Python_DOC_referPages.why-does-pip-install-inside-python-raise-a-syntaxerror.txt
<div class="post-text" itemprop="text">
<p>I'm trying to use pip to install a package.  I try to run <code>pip install</code> from the Python shell, but I get a <code>SyntaxError</code>.  Why do I get this error?  How do I use pip to install the package?</p>
<pre><code>&gt;&gt;&gt; pip install selenium
              ^
SyntaxError: invalid syntax
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>pip is run from the command line, not the Python interpreter. It is a program that <strong>installs</strong> modules, so you can use them from Python. Once you have installed the module, then you can open the Python shell and do <code>import selenium</code>.</p>
<p>The Python shell is not a command line, it is an interactive interpreter. You type Python code into it, not commands.</p>
</div>
<div class="post-text" itemprop="text">
<p>Use the command line, not the Python shell (DOS, PowerShell in Windows).</p>
<pre><code>C:\Program Files\Python2.7\Scripts&gt; pip install XYZ
</code></pre>
<p>If you installed Python into your PATH using the latest installers, you don't need to be in that folder to run pip </p>
<p>Terminal in Mac or Linux</p>
<pre><code>$ pip install XYZ
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p><strong>UPDATE</strong>: <strong>Since pip version 10.x</strong> there is no more <code>get_installed_distributions()</code> or <code>main</code> method under <code>import pip</code> <strong>instead use</strong> <code>import pip._internal as pip</code>.
<hr/>
If you want to use pip inside the Python interpreter, try this:</p>
<pre><code>import pip

package_names=['selenium', 'requests'] #packages to install
pip.main(['install'] + package_names + ['--upgrade']) 
# --upgrade to install or update existing packages
</code></pre>
<p>If you need to update every installed package, use following:</p>
<pre><code>import pip

for i in pip.get_installed_distributions():
    pip.main(['install', i.key, '--upgrade'])
</code></pre>
<p>If you want to stop installing other packages if any installation fails, use it in one single <code>pip.main([])</code> call:</p>
<pre><code>import pip

package_names = [i.key for i in pip.get_installed_distributions()]
pip.main(['install'] + package_names + ['--upgrade'])
</code></pre>
<p><strong>Note</strong>: When you install from list in file with <code>-r</code> / <code>--requirement</code> parameter you do NOT need open() function.</p>
<pre><code>pip.main(['install', '-r', 'filename'])
</code></pre>
<p><strong>Warning</strong>: Some parameters as simple <code>--help</code> may cause python interpreter to stop.</p>
<p>Curiosity: By using <code>pip.exe</code> you actually use python interpreter and pip module anyway. If you unpack <code>pip.exe</code> or <code>pip3.exe</code> regardless it's python 2.x or 3.x, inside is the SAME single file <code>__main__.py</code>:</p>
<pre><code># -*- coding: utf-8 -*-
import re
import sys

from pip import main

if __name__ == '__main__':
    sys.argv[0] = re.sub(r'(-script\.pyw?|\.exe)?$', '', sys.argv[0])
    sys.exit(main())
</code></pre>
</div>
<div class="post-text" itemprop="text">
<p>To run pip in Python 3.x, just follow the instructions on Python's page: <a href="https://docs.python.org/3/installing/" rel="noreferrer" title="Installing Python Modules">Installing Python Modules</a>.</p>
<pre><code>python -m pip install SomePackage
</code></pre>
<p>Note that this is run from the command line and not the python shell (the reason for syntax error in the original question).</p>
</div>
<div class="post-text" itemprop="text">
<p>Try upgrade pip with the below command and retry</p>
<pre><code>python -m pip install -U pip
</code></pre>
</div>
<span class="comment-copy">Thanks for the clarification, but I still can't get it to run. Where exactly is it? It is giving me a "pip is not recognized" error (because I'm not the right dir). It was installed in \site-packages but I'm looking thought it and I can't find any pip.exe</span>
<span class="comment-copy">@Nacht - <code>pip</code> will be in the scripts directory of your python install so you will want to add it to your path. Add <code>C:\Python32\scripts</code> to your <code>PATH</code>. Change the path as necessary based on where you installed it.</span>
<span class="comment-copy">Actually pip.exe in windows is an python script as others in /scripts directory, but wraped in exe to run it with default python interpreter. By opening pip.exe with 7-zip you can see <i>main</i>.py importing pip, sys and re modules... (And there you'll find the answer how to run it within a python shell)--&gt; pip is a regular python module. Don't forget windows wasn't first platform supporting python, linux was, and there python is a part of OS.</span>
<span class="comment-copy">I know for me I had to do this from the command line (not python command line). This was after changing directory to the location of python.exe and then needed to put the file type on pip3. In my case I was after requests for HTTP work. Namely:  python pip3.exe install requests &lt;--- this worked perfectly, repeated the same for pytz module</span>
<span class="comment-copy">Thanks for including the C:...., helped me realize where I needed to cd to as you cant simply open command line and type pip.</span>
<span class="comment-copy">FYI I the Python install I just did did NOT set the <code>PATH</code>. I had to do this manually, pointing to the install path in <code>%APPDATA%</code></span>
<span class="comment-copy">This works in the Python shell, so I think it should be the accepted answer.</span>
<span class="comment-copy">This is exactly what I was hoping to find when Googling this problem.</span>
<span class="comment-copy">Great answer, and it should definitely be included here, but I disagree it should be the accepted answer, since the user was clearly trying to make the now ubiquitous syntax "pip install" work.  Since that syntax will not work with this method, it does not directly solve that issue.  It may be more useful than the accepted answer though :)</span>
<span class="comment-copy">No idea what was really meant by OP, but this answer was really late answer, so it's not important if it's the accepted here.</span>
<span class="comment-copy">@Zydnar, agreed--my response was to Francois, who said this should be the accepted answer.  I posted my reasoning as to why not.  That said, I still think this is a great post.</span>
<span class="comment-copy">I'm still receiving invalid syntax.  I'm using IPython on a Windows 10 pc.  Any thoughts?</span>
<span class="comment-copy">This page has instructions for installing IPython: <a href="http://ipython.readthedocs.io/en/stable/install/index.html" rel="nofollow noreferrer">ipython.readthedocs.io/en/stable/install/index.html</a>  $ pip install ipython.  Presumably that would translate to $ python -m pip install ipython</span>
<span class="comment-copy">This doesn't answer anything about the syntax error</span>
<span class="comment-copy">This was already covered by other answers, but I added it now. My answer was just a supplement for 3.x.</span>
<span class="comment-copy">This worked for me on windows 10</span>
